# solana-program-templates

./: Anchor.toml  LICENSE  README.md  package.json
keys/: new_delegate_authority.json  rst_mint.json  user.json
lrt-template/: README.md  package.json
lrt-template/keys/: delegate_authority.json  output_token_mint.json
lrt-template/programs/lrt-template/: Cargo.toml
lrt-template/programs/lrt-template/src/: errors.rs  lib.rs
lrt-template/programs/lrt-template/src/contexts/: delegate.rs  deposit.rs  initialize.rs  mod.rs  transfer_delegate_authority.rs  withdraw.rs  withdraw_stake.rs
lrt-template/programs/lrt-template/src/state/: lrt_pool.rs  mod.rs
lrt-template/scripts/: constants.ts  delegate.ts  deposit.ts  helpers.ts  initialize.ts  transfer-delegate-authority.ts  undelegate.ts  withdraw-stake.ts  withdraw.ts
lrt-template/tests/: lrt-template.ts
programs/lrt-template/: Cargo.toml
programs/lrt-template/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/lrt-template/src/contexts/: delegate.rs  deposit.rs  initialize.rs  mod.rs  transfer_delegate_authority.rs  withdraw.rs  withdraw_stake.rs
programs/lrt-template/src/state/: lrt_pool.rs
scripts/: delegate.ts  deposit.ts  helpers.ts  initialize.ts  transfer-delegate-authority.ts  undelegate.ts  withdraw-stake.ts  withdraw.ts
